--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,3 @@
-spring.data.mongodb.host=localhost
-
-spring.data.mongodb.uri=mongodb://127.0.0.1:27017/products?directConnection=true
+spring.data.mongodb.uri=mongodb://localhost:27017/products?directConnection=true
 
 
