--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=product-service
 
-spring.data.mongodb.uri=mongodb://127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.2.10
+spring.data.mongodb.uri=mongodb://localhost:27017/products?directConnection=true
 
